Some more wrap fix.

--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -63,3 +63,8 @@
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 pre { white-space: pre; overflow: auto; }
+
+.highlighter-rouge {
+    background: #F6F9FB;
+    overflow-wrap: break-word;
+}
